--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>Document</title>
+	<title>北京经贸学院管理系统</title>
 	<link rel="stylesheet" type="text/css" href="jquery-easyui-1.5.2/themes/default/easyui.css">
 	<link rel="stylesheet" type="text/css" href="jquery-easyui-1.5.2/themes/icon.css">
 	<script type="text/javascript" src="jquery-easyui-1.5.2/jquery.min.js"></script>
@@ -13,22 +13,7 @@
         <div class="easyui-layout" data-options="fit:true">
             <div data-options="region:'west'" style="width:180px">
             	<ul id="nav" class="easyui-tree">
-				    <li>
-				        <span>Folder</span>
-				        <ul>
-				            <li>
-				                <span>Sub Folder 1</span>
-				                <ul>
-				                    <li><span><a href="#">File 11</a></span></li>
-				                    <li><span>File 12</span></li>
-				                    <li><span>File 13</span></li>
-				                </ul>
-				            </li>
-				            <li><span>File 2</span></li>
-				            <li><span>File 3</span></li>
-				        </ul>
-				    </li>
-				    <li><a href="#" onclick="open1('info')">个人信息</a></li>
+				    <!--<li><a href="#" onclick="open1('info')">个人信息</a></li>-->
 				</ul>
             </div>
             <div id="tt" class="easyui-tabs" data-options="region:'center'" >
@@ -36,10 +21,9 @@
 			</div>
         </div>
     </div>
+	<script src="js/common.js"></script>
     <script>
-    
-			
-			function open1(plugin){
+			function openiniframe(plugin){
 				var content = '<iframe scrolling="auto" frameborder="0"  src="'+plugin+'.html?='+Math.random()+'" style="width:100%;height:100%;"></iframe>';
 				if ($('#tt').tabs('exists',plugin)){
 					$('#tt').tabs('select', plugin);
@@ -54,6 +38,19 @@
 				}
 			}
 
+			$.post(commonURL + 'm/user/loginMenu.do', {}, function(json){
+			    if(json.success){
+                    $("#nav").tree({
+                        data: json.data.menulist,
+						onClick: function(node){
+                            var openlink = node.url
+                            openiniframe(openlink)
+						}
+                    })
+				}else{
+			        alert(json.msg)
+				}
+			}, 'json')
 
     </script>	
 </body>
