--- a/index.html
+++ b/index.html
@@ -5,19 +5,25 @@
 	<title>北京经贸学院管理系统</title>
 	<link rel="stylesheet" type="text/css" href="jquery-easyui-1.5.2/themes/default/easyui.css">
 	<link rel="stylesheet" type="text/css" href="jquery-easyui-1.5.2/themes/icon.css">
+	<link rel="stylesheet" href="css/global.css">
 	<script type="text/javascript" src="jquery-easyui-1.5.2/jquery.min.js"></script>
 	<script type="text/javascript" src="jquery-easyui-1.5.2/jquery.easyui.min.js"></script>
 </head>
 <body class="easyui-layout">
     <div data-options="region:'center'">
         <div class="easyui-layout" data-options="fit:true">
-            <div data-options="region:'west'" style="width:180px">
+			<div data-options="region:'north'" class="header" style="height:110px">
+				<a href="#" class="easyui-linkbutton fr" data-options="iconCls:'icon-undo'">退出登录</a>
+				<span class="welcometip fr">北京经贸学院校园信息门户欢迎您的登录</span>
+			</div>
+            <div data-options="region:'west'" title="功能导航" style="width:220px">
             	<ul id="nav" class="easyui-tree">
-				    <!--<li><a href="#" onclick="open1('info')">个人信息</a></li>-->
+
 				</ul>
             </div>
             <div id="tt" class="easyui-tabs" data-options="region:'center'" >
-			    <div title="welcome" href="welcome.html" class="content-doc"></div>
+			    <!--<div title="welcome" href="welcome.html" class="content-doc"></div>-->
+				<iframe scrolling="auto" frameborder="0"  src="welcome.html" style="width:100%;height:100%;"></iframe>
 			</div>
         </div>
     </div>
