--- a/welcome.html
+++ b/welcome.html
@@ -1,6 +1,58 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+	<meta charset="UTF-8">
+	<title>北京经贸学院管理系统</title>
+	<link rel="stylesheet" type="text/css" href="jquery-easyui-1.5.2/themes/default/easyui.css">
+	<link rel="stylesheet" type="text/css" href="jquery-easyui-1.5.2/themes/icon.css">
+	<link rel="stylesheet" href="css/global.css">
+	<script type="text/javascript" src="jquery-easyui-1.5.2/jquery.min.js"></script>
+	<script type="text/javascript" src="jquery-easyui-1.5.2/jquery.easyui.min.js"></script>
+</head>
+<body class="easyui-layout">
+	<div data-options="region:'west'" style="width:258px;">
+		<div id="p" class="easyui-panel" title="个人信息" style="width:258px; height:100%;">
+			<div class="easyui-accordion" data-options="fit:true,border:false">
+				<div class="w-userinfo">
+					<div class="avatar">
+						<img src="images/WX20170827-002735@2x.png" alt="">
+					</div>
+					<div class="userintro">
+						<div>工号：12241242</div>
+						<div>人员身份：超级管理员</div>
+						<div>上次登录时间：2019-10-09</div>
+						<div>欢迎使用校园信息门户！</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+	<div data-options="region:'center'">
+		<div class="easyui-panel" title="学校新闻" style="width:100%; height:400px;">
+			<div class="easyui-accordion" data-options="fit:true,border:false">
 
-	<h1 id="h">welcome</h1>
-	<button id="click">click</button>
-	<script>$("#click").click(function(){
-		console.log($("#h").text())
-	})</script>
+			</div>
+		</div>
+		<div class="easyui-panel" title="政策新闻" style="width:100%; height:auto">
+			<div class="easyui-accordion" data-options="fit:true,border:false">
+				政策新闻X8
+			</div>
+		</div>
+	</div>
+	<div data-options="region:'east'" style="width:350px;">
+		<div class="easyui-panel" title="学校新闻" style="width:350px; height:400px;">
+			<div class="easyui-accordion" data-options="fit:true,border:false">
+
+			</div>
+		</div>
+		<div class="easyui-panel" title="校务公开" style="width:350px; height:auto;">
+			<div class="easyui-accordion" data-options="fit:true,border:false">
+				校务公开X6
+			</div>
+		</div>
+	</div>
+
+<script src="js/common.js"></script>
+
+</body>
+</html>
