remove user headimg in welcome & modify tab in index

--- a/welcome.html
+++ b/welcome.html
@@ -14,9 +14,9 @@
 		<div id="p" class="easyui-panel" title="个人信息" style="width:258px; height:100%;">
 			<div class="easyui-accordion" data-options="fit:true,border:false">
 				<div class="w-userinfo">
-					<div class="avatar">
-						<img src="images/WX20170827-002735@2x.png" alt="">
-					</div>
+					<!--<div class="avatar">-->
+						<!--<img src="images/WX20170827-002735@2x.png" alt="">-->
+					<!--</div>-->
 					<div class="userintro">
 						<div>工号：12241242</div>
 						<div>人员身份：超级管理员</div>
