--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 	<link rel="stylesheet" href="css/global.css">
 	<script type="text/javascript" src="jquery-easyui-1.5.2/jquery.min.js"></script>
 	<script type="text/javascript" src="jquery-easyui-1.5.2/jquery.easyui.min.js"></script>
+	<script type="text/javascript" src="jquery-easyui-1.5.2/locale/easyui-lang-zh_CN.js"></script>
 </head>
 <body class="easyui-layout">
     <div data-options="region:'center'">
@@ -34,8 +35,8 @@
 			    var plugin = node.url
 			    var title = node.text
 				var content = '<iframe scrolling="auto" frameborder="0"  src="'+plugin+'.html?='+Math.random()+'" style="width:100%;height:100%;"></iframe>';
-				if ($('#tt').tabs('exists',plugin)){
-					$('#tt').tabs('select', plugin);
+				if ($('#tt').tabs('exists',title)){
+					$('#tt').tabs('select', title);
 				} else {
 					$('#tt').tabs('add',{
 						title:title,
@@ -52,8 +53,10 @@
                     $("#nav").tree({
                         data: json.data.menulist,
 						onClick: function(node){
-                            var openlink = node
-                            openiniframe(openlink)
+                            if(node.parent_id != null){
+                                var openlink = node
+                                openiniframe(openlink)
+							}
 						}
                     })
                     openiniframe({url: "welcome", text: "欢迎"})
