add easyui lang

--- a/passwordmodify.html
+++ b/passwordmodify.html
@@ -8,6 +8,7 @@
 	<link rel="stylesheet" href="css/global.css">
 	<script type="text/javascript" src="jquery-easyui-1.5.2/jquery.min.js"></script>
 	<script type="text/javascript" src="jquery-easyui-1.5.2/jquery.easyui.min.js"></script>
+	<script type="text/javascript" src="jquery-easyui-1.5.2/locale/easyui-lang-zh_CN.js"></script>
 </head>
 <body>
 	<div id="passwordmodify" class="easyui-dialog" title="修改密码" data-options="
