--- a/contractist.html
+++ b/contractist.html
@@ -8,68 +8,230 @@
     <link rel="stylesheet" href="css/global.css">
     <script type="text/javascript" src="jquery-easyui-1.5.2/jquery.min.js"></script>
     <script type="text/javascript" src="jquery-easyui-1.5.2/jquery.easyui.min.js"></script>
+    <script type="text/javascript" src="jquery-easyui-1.5.2/locale/easyui-lang-zh_CN.js"></script>
 </head>
 <body>
 <table class="easyui-datagrid" style="width:100%;height:450px"
        title="合同列表" toolbar="#tb"
-       singleSelect="true" fitColumns="true" pagination="true" id="contractlist">
-
+       singleSelect="true" fitColumns="true" id="contractlist">
 </table>
+<div class="easyui-dialog" id="contractfiles" title="合同文件" closed="true"
+     style="width:300px;height:auto;padding:10px"></div>
+<div id="addcontract" class="easyui-dialog" title="添加合同" style="width:400px;height:auto;padding:10px">
+    <table cellpadding="5">
+        <tr>
+            <td>合同名:</td>
+            <td><input class="easyui-validatebox" type="text" name="title" data-options="required:true"></input></td>
+        </tr>
+        <tr>
+            <td>合同所属员工的职工号:</td>
+            <td><input class="easyui-validatebox" type="text" name="username" data-options="required:true"></input></td>
+        </tr>
+        <tr>
+            <td>姓名:</td>
+            <td><input class="easyui-validatebox" type="text" name="name" data-options="required:true"></input></td>
+        </tr>
+        <tr>
+            <td>类型:</td>
+            <td><select class="easyui-combobox" name="type" data-options="editable:false">
+                <option value="1">聘用合同</option>
+                <option value="0">其他</option>
+            </select>
+            </td>
+        </tr>
+        <tr>
+            <td>描述:</td>
+            <td><input class="easyui-validatebox" type="text" name="desc" data-options="required:true"></input></td>
+        </tr>
+        <tr>
+            <td>合同截止时间:</td>
+            <td><input class="easyui-datebox" name="endTime" style="width:100%" data-options="required:true"
+                       readonly="readonly"></input>
+            </td>
+        </tr>
+    </table>
+    <p class="error hide">您还有未填的项目，无法提交！</p>
+</div>
 
 <div id="tb" style="padding:5px;height:auto">
     <div style="margin-bottom:5px">
-        <a href="#" class="easyui-linkbutton" iconCls="icon-add" plain="true" onclick="addcontract()"></a>
-        <a href="#" class="easyui-linkbutton" iconCls="icon-edit" plain="true"></a>
-        <a href="#" class="easyui-linkbutton" iconCls="icon-save" plain="true"></a>
-        <a href="#" class="easyui-linkbutton" iconCls="icon-remove" plain="true"></a>
-        <a href="#" class="easyui-linkbutton" iconCls="icon-search" plain="true" onclick="showcontract()"></a>
+        <a href="#" class="easyui-linkbutton" iconCls="icon-add" plain="true" onclick="addrow()"></a>
+        <a href="#" class="easyui-linkbutton" iconCls="icon-edit" plain="true" onclick="editrow()"></a>
+        <a href="#" class="easyui-linkbutton" iconCls="icon-save" plain="true" onclick="saverow()"></a>
+        <a href="#" class="easyui-linkbutton" iconCls="icon-remove" plain="true" onclick="deleterow()"></a>
+        <!--<a href="#" class="easyui-linkbutton" iconCls="icon-search" plain="true" onclick="showcontract()"></a>-->
     </div>
-    <!--<div>-->
-        <!--Date From: <input class="easyui-datebox" style="width:80px">-->
-        <!--To: <input class="easyui-datebox" style="width:80px">-->
-        <!--Language:-->
-        <!--<input class="easyui-combobox" style="width:100px"-->
-               <!--url="data/combobox_data.json"-->
-               <!--valueField="id" textField="text">-->
-        <!--<a href="#" class="easyui-linkbutton" iconCls="icon-search">Search</a>-->
-    <!--</div>-->
 </div>
 <script src="js/common.js"></script>
 <script>
-    $.post(commonURL + 'm/agreement/list.do', {}, function (json) {
-        if(json.success){
-            $('#contractlist').datagrid({
-                data: json.data.list,
-                columns:[[
-                    {field:'id',title:'合同ID',width:100},
-                    {field:'name',title:'姓名',width:100},
-                    {field:'username',title:'职工号',width:100},
-                    {field:'title',title:'合同名',width:100},
-                    {field:'type',title:'type',width:100, formatter: function(value,row,index){
-                        if(value == 1){
-                            return "聘用合同"
-                        }else{
-                            return "其他"
-                        }
-                    }},
-                    {field:'desc',title:'合同描述',width:100},
-                    {field:'ent_timestr',title:'合同到期时间',width:100},
-                ]]
-            });
-        }else{
-            alert(json.msg)
+    var editRowIndex = null;
+    var type = [
+        {value: 0, text: '其他'},
+        {value: 1, text: '聘用合同'}
+    ]
+    $('#contractlist').datagrid({
+        url: commonURL + 'm/agreement/list.do',
+        pagination: true,
+        pageSize: 10,
+        pageList: [10, 20],
+        loadFilter: function (data) {
+            if (data.data) {
+                return data.data;
+            } else {
+                return data;
+            }
+        },
+        onBeforeLoad: function (param) {
+            var startNum = Number(param.rows) * Number(param.page) - 10
+            param["startNum"] = startNum
+            param["perNum"] = param.rows;
+        },
+        columns: [[
+            {field: 'id', title: '合同ID', width: 100},
+            {field: 'name', title: '姓名', editor: {type:'validatebox',options:{required:true}}, width: 100},
+            {field: 'username', title: '职工号', editor: {type:'validatebox',options:{required:true}}, width: 100},
+            {field: 'title', title: '合同名', editor: {type:'validatebox',options:{required:true}}, width: 100},
+            {
+                field: 'type', title: 'type', width: 100,
+                formatter: function (value, row, index) {
+                    if (value == 1) {
+                        return "聘用合同"
+                    } else {
+                        return "其他"
+                    }
+                },
+                editor: {
+                    type: 'combobox',
+                    options: {
+                        valueField: 'value',
+                        textField: 'text',
+                        data: type
+                    }
+                }
+            },
+            {field: 'descs', title: '合同描述', editor: {type:'validatebox',options:{required:true}}, width: 100},
+            {field: 'ent_timestr', title: '合同到期时间', editor: {type:'datebox',options:{required:true}}, width: 100},
+            {
+                field: 'contractfiles', title: '合同文件', formatter: function (value, row, index) {
+                return '<a href="javascript:;" onclick="showcontract(\'' + row.id + '\')">获取合同文件</a>'
+            }
+            }
+        ]],
+        onSelect: function (index, row) {
+            if (editRowIndex == null) return;
+            $('#contractlist').datagrid('cancelEdit', editRowIndex);
+        },
+        onAfterEdit: function (index, row, changes) {
+            changes.agrId = row.id
+            if(changes.ent_timestr != undefined){
+                changes.endTime = changes.ent_timestr
+            }
+            if(changes.descs != undefined){
+                changes.desc = changes.descs
+            }
+            $.post(commonURL + 'm/agreement/edit.do', changes, function (json) {
+                if(json.success){
+                    $.messager.alert('提示', '修改成功！', 'info');
+                }else{
+                    alert(json.msg)
+                }
+            }, 'json')
         }
-    }, 'json')
+    });
 
-    function showcontract() {
 
+    function addrow() {
+        $("#addcontract").dialog("open")
     }
 
-    function addcontract() {
-        $.post(commonURL + 'm/agreement/list.do', {}, function (json) {
+    $("#addcontract").dialog({
+        closed: true,
+        buttons: [{
+            text: '添加',
+            iconCls: 'icon-ok',
+            handler: function () {
+                var postdata = {
+                    title: $("input[name=title]").val(),
+                    username: $("input[name=username]").val(),
+                    name: $("input[name=name]").val(),
+                    type: $("input[name=type]").val(),
+                    desc: $("input[name=desc]").val(),
+                    endTime: $("input[name=endTime]").val(),
+                    fileIds: '' //file list set empty
+                }
+                if (postdata.title == "" || postdata.username == "" || postdata.name == "" || postdata.type == "" || postdata.desc == "" || postdata.endTime == "") {
+                    $("#addcontract .error").removeClass("hide")
+                    return false
+                }
+                $("#addcontract .error").addClass("hide")
+                $.post(commonURL + 'm/agreement/add.do', postdata, function (json) {
+                    if (json.success) {
+                        $("input[name=title]").val('')
+                        $("input[name=username]").val('')
+                        $("input[name=name]").val('')
+                        $("input[name=type]").val('')
+                        $("input[name=desc]").val('')
+                        $("input[name=endTime]").val('')
+                        $("#addcontract").dialog("close")
+                        alert("添加成功")
+                        $("#contractlist").datagrid('reload', {})
+                    } else {
+                        alert(json.msg)
+                    }
+                }, 'json')
+            }
+        }]
+    })
 
+    function showcontract(contractid) { //显示合同文件
+        $.post(commonURL + 'm/agreement/getFilelist.do', {agreementId: contractid}, function (json) {
+            if (json.success) {
+                var filelist = json.data.list
+                var filehtml = ''
+                if (filelist.length > 0) {
+                    filelist.forEach(function (t, i) {
+                        filehtml += '<a href="' + commonURL + t.mename + '" target="_blank">合同文件' + (i + 1) + '</a>&nbsp;&nbsp;'
+                    })
+                } else {
+                    filehtml = "暂无合同文件"
+                }
+
+                $("#contractfiles").dialog({
+                    content: filehtml
+                })
+                $("#contractfiles").dialog('open')
+            } else {
+                alert(json.msg)
+            }
         }, 'json')
     }
+
+    function deleterow() { //删除记录
+        var rowIndex = getRowIndex($('#contractlist'))
+        $.messager.confirm('提示', '你确定要删除这条记录吗？', function (r) {
+            if (r) {
+                $.post(commonURL + 'm/agreement/del.do', {agrId: target.id}, function (json) {
+                    if (json.success) {
+                        $('#contractlist').datagrid('deleteRow', rowIndex);
+                    } else {
+                        alert(json.msg)
+                    }
+                }, 'json')
+            }
+        });
+    }
+
+    function editrow() {
+        var rowIndex = getRowIndex($('#contractlist'))
+        editRowIndex = rowIndex
+        $('#contractlist').datagrid('beginEdit', rowIndex);
+    }
+
+    function saverow() {
+        var rowIndex = editRowIndex
+        $("#contractlist").datagrid('endEdit', rowIndex)
+    }
+
 </script>
 </body>
 </html>
