modify type to chinese

--- a/contractist.html
+++ b/contractist.html
@@ -97,7 +97,7 @@
             {field: 'username', title: '职工号', editor: {type: 'validatebox', options: {required: true}}, width: 100},
             {field: 'title', title: '合同名', editor: {type: 'validatebox', options: {required: true}}, width: 100},
             {
-                field: 'type', title: 'type', width: 100,
+                field: 'type', title: '合同类型', width: 100,
                 formatter: function (value, row, index) {
                     if (value == 1) {
                         return "聘用合同"
