--- a/contractist.html
+++ b/contractist.html
@@ -157,7 +157,7 @@
                     contentType: false,
                     success: function (json) {
                         if (json["success"]) {
-                            changes.fileIds = json.data.fileId
+                            changes.fileIds = json.data.list[0]['fileId']
                             updateContract(changes)
                         } else {
                             alert(json.msg);
@@ -223,7 +223,7 @@
                         contentType: false,
                         success: function (json) {
                             if (json["success"]) {
-                                postdata.fileIds = json.data.fileId
+                                postdata.fileIds = json.data.list[0]['fileId']
                                 insertContract(postdata)
                             } else {
                                 alert(json.msg);
@@ -283,7 +283,8 @@
 
     function deleterow() { //删除记录
         var rowIndex = getRowIndex($('#contractlist'))
-        var row = $('#goodslist').datagrid('getSelected')
+        var row = $('#contractlist' +
+            '').datagrid('getSelected')
         $.messager.confirm('提示', '你确定要删除这条记录吗？', function (r) {
             if (r) {
                 $.post(commonURL + 'm/agreement/del.do', {agrId: row.id}, function (json) {
