--- a/teachermanagement.html
+++ b/teachermanagement.html
@@ -17,7 +17,7 @@
        title="教职工列表" toolbar="#tb"
        singleSelect="true" fitColumns="true" id="userlist">
 </table>
-<div id="addialog" class="easyui-dialog" title="添加教职工" style="width:auto;height:auto;padding:10px">
+<div id="addialog" class="easyui-dialog" closed="true" style="width:auto;height:auto;padding:10px">
     <form action="" id="formlist">
         <table cellpadding="5">
             <tr>
@@ -50,9 +50,12 @@
                 <td><input class="easyui-validatebox" type="text" name="zip_code"></input></td>
             </tr>
             <tr>
-                <td>账户类型:</td>
-                <td><input class="easyui-combobox" name="type" data-options="editable:false">
-                    </input></td>
+                <td>
+                    <!--账户状态:-->
+                </td>
+                <td>
+                    <!--<input class="easyui-combobox" name="type" data-options="editable:false">-->
+                </td>
                 <td>出生日期:</td>
                 <td><input class="easyui-datebox" style="width: 100%" type="text" name="birthday"></input></td>
                 <td>民族:</td>
@@ -249,13 +252,19 @@
                     return '<a href="javascript:;" onclick="opaccount(\'' + row.id + '\', ' + index +', 1)">解禁</a>'
                 }
             }}
-        ]]
+        ]],
+        onSelect: function (index, row) {
+            if (editRowIndex == null) return;
+            $('#userlist').datagrid('cancelEdit', editRowIndex);
+        }
     });
 
     function updateRow(changes) {
-        $.post(commonURL + 'm/tserver/edit.do', changes, function (json) {
+        $.post(commonURL + 'm/user/editUserinfo.do', changes, function (json) {
             if (json.success) {
                 $.messager.alert('提示', '修改成功！', 'info');
+                $("#addialog").dialog("close")
+                $("#formlist").form('clear');
             } else {
                 alert(json.msg)
             }
@@ -263,39 +272,70 @@
     }
 
     function addrow() {
+        opdialog(1)
         $("#addialog").dialog("open")
     }
 
-    $("#addialog").dialog({
-        closed: true,
-        buttons: [{
-            text: '保存',
-            iconCls: 'icon-ok',
-            handler: function () {
-                var formdata = $("#formlist").serializeArray()
-                var postdata = {}
-                $.each(formdata,
-                    function (i) {
-                    postdata[formdata[i]["name"]] = formdata[i]["value"]
-                })
-                if(postdata.username === ""){
-                    $("#addialog .error").removeClass("hide")
-                    return false
-                }
+    function opdialog(optype, userid) {
+        $("#addialog").dialog({
+            closed: true,
+            title: optype==1?'添加教职工':'信息修改',
+            buttons: [{
+                text: '保存',
+                iconCls: 'icon-ok',
+                handler: function () {
+                    var formdata = $("#formlist").serializeArray()
+                    var postdata = {}
+                    $.each(formdata,
+                        function (i) {
+                            postdata[formdata[i]["name"]] = formdata[i]["value"]
+                        })
+                    if(postdata.username === ""){
+                        $("#addialog .error").removeClass("hide")
+                        return false
+                    }
 
-                $("#addialog .error").addClass("hide")
-                postdata.type = 2
-                insertRow(postdata)
-            }
-        }]
-    })
+                    $("#addialog .error").addClass("hide")
+
+                    if(optype === 2){
+                        postdata.userId = userid
+                    }
+                    if(optype === 1){
+                        postdata.type = 2
+                    }
+                    optype==1?insertRow(postdata):updateRow(postdata)
+                }
+            }]
+        })
+    }
+//    $("#addialog").dialog({
+//        closed: true,
+//        buttons: [{
+//            text: '保存',
+//            iconCls: 'icon-ok',
+//            handler: function () {
+//                var formdata = $("#formlist").serializeArray()
+//                var postdata = {}
+//                $.each(formdata,
+//                    function (i) {
+//                    postdata[formdata[i]["name"]] = formdata[i]["value"]
+//                })
+//                if(postdata.username === ""){
+//                    $("#addialog .error").removeClass("hide")
+//                    return false
+//                }
+//
+//                $("#addialog .error").addClass("hide")
+//                postdata.type = 2
+//                insertRow(postdata)
+//            }
+//        }]
+//    })
 
     function insertRow(postdata) {
         $.post(commonURL + 'm/user/add.do', postdata, function (json) {
             if (json.success) {
-                $("#formlist input").each(function () {
-                    $(this).val('')
-                })
+                $("#formlist").form('clear');
                 $("#addialog").dialog("close")
                 alert("添加成功")
                 $("#userlist").datagrid('reload', {})
@@ -322,9 +362,22 @@
     }
 
     function editrow() {
-        var rowIndex = getRowIndex($('#userlist'))
-        editRowIndex = rowIndex
-        $('#userlist').datagrid('beginEdit', rowIndex);
+//        var rowIndex = getRowIndex($('#userlist'))
+//        editRowIndex = rowIndex
+        var row = $('#userlist').datagrid('getSelected')
+        $.post(commonURL + 'm/user/userinfo.do', {userId: row.id}, function (json) {
+            if(json.success){
+                var data = json.data
+                data["birthday"] = data["birthdaystr"]
+                data["teach_time"] = data["teach_timestr"]
+                $('#formlist').form('load', data);
+                opdialog(2, row.id)
+                $("#addialog").dialog("open")
+            }else{
+                alert(json.msg)
+            }
+        })
+
     }
 
     function saverow() {
