--- a/userdetail.html
+++ b/userdetail.html
@@ -81,7 +81,7 @@
                 '</tr>'+
                 '<tr>'+
                 '<td style="align:left;valign:middle" class="portlet-table-odd"><b>参加工作时间&nbsp;</b></td>'+
-                '<td style="align:left;valign:middle" colspan="2" class="portlet-table-even">&nbsp;' + filterNull(data["teach_time"]) + '</td>'+
+                '<td style="align:left;valign:middle" colspan="2" class="portlet-table-even">&nbsp;' + filterNull(data["teach_timestr"]) + '</td>'+
                 '<td style="align:left;valign:middle" class="portlet-table-odd"><b>教师类型&nbsp;</b></td>'+
                 '<td style="align:left;valign:middle" class="portlet-table-even">&nbsp;' + filterNull(useraccount.teachtype[data["teacher_type"]]) + '</td>'+
                 '<td style="align:left;valign:middle" class="portlet-table-odd"><b>签订合同类型&nbsp;</b></td>'+
